<resources>
    <string name="welcome_app">Bienvenido a Finanzas Personales</string>
    <string name="app_msg">Esta aplicación contiene los siguientes modulos:</string>
    <string name="simulators">Simuladores</string>
    <string name="simulator_vary_quote">> Crédito a Cuota Variable</string>
    <string name="simulator_fix_quote">> Crédito a Cuota Fija</string>
    <string name="projection_payment">> Proyección de Gastos</string>
    <string name="payment_cash">> Pagos con Tarjeta débito o Efectivo</string>
    <string name="payment_credits">> Pago Créditos</string>
    <string name="payment_credit_card">> Pagos con Tarjeta Crédito</string>
    <string name="wiki_sms">Conoce mas en la Wiki</string>
    <string name="wiki_url">https://github.com/nano871022/Finances/wiki</string>
    <string name="error_login">No se puede realizar login, vuelva a intentar más tarde</string>
    <string name="msg_checkbox">Mostrar Mensaje Bienvenidos</string>
    <string name="settings_app">Configuraciones Aplicación</string>
    <string name="not_data">No hay datos que mostrar</string>
    <string name="ccio_restore">Restaurar</string>
    <string name="app_name">Finanzas</string>
    <string name="about_it">Acerca de</string>
    <string name="version">Versión</string>
    <string name="contact_at">jalejandroparral@hotmail.com</string>
    <string name="copyright">CopyRight © 2022–2022 Alejandro Parra </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="credit_card_setting_title">Configuración Tarjeta Credito</string>
    <string name="credit_card_setting_type">Tipo</string>
    <string name="credit_card_setting_type_setting">Tipo Configuración</string>
    <string name="credit_card_setting_name_setting">Nombre Configuración</string>
    <string name="value">Valor</string>
    <string name="Active">Estado</string>
    <string name="navigation_drawer_open">1</string>
    <string name="navigation_drawer_close">0</string>
    <string name="build_by">Alejandro Parra - JAPL.co</string>
    <string name="quote_credit">Cuota del Crédito</string>
    <string name="quote_credit_hint">0.00</string>
    <string name="quote_credit_variable">Cuota del Crédito Variable</string>
    <string name="list_save">Lista calculos almacenados</string>
    <string name="list_periods">Lista de Periodos</string>
    <string name="tax">Tasa</string>
    <string name="kind_of_tax">Tipo de Tasa</string>
    <string name="kind_initial_quote">Tipo</string>
    <string name="months">Meses</string>
    <string name="initial_quote">Cuota Inicial</string>
    <string name="periods">Periodos</string>
    <string name="months_number_hint">000</string>
    <string name="credit_value">Valor del Credito</string>
    <string name="months_number">Número de Meses</string>
    <string name="tax_percent">Tasa % </string>
    <string name="interest_value_hint">0.00 </string>
    <string name="percent_symbol">%</string>
    <string name="calc">Calcular</string>
    <string name="quote_value">Valor de la cuota</string>
    <string name="clear">Limpiar</string>
    <string name="error_calc">Se presento un error en el calculo </string>
    <string name="error_empty">El campo se encuentra vacio</string>
    <string name="capital_value">Valor a capital</string>
    <string name="interest_value">Valor a intereses</string>
    <string name="interest_to_pay_value">Intereses a pagar</string>
    <string name="amortization_table">Tabla de Amortización</string>
    <string name="amortization">Amortización</string>
    <string name="total_value">Valor total</string>
    <string name="save">Guardar</string>
    <string name="saved">Guardado Correctamente</string>
    <string name="add">Agregar</string>
    <string name="save_new">Guardar y Crear Nuevo</string>
    <string name="setting_redirect">Ir a Configuraciones</string>
    <string name="quote_credit_save">Guardar - Cuota Credito Fija</string>
    <string name="quote_credit_save_variable">Guardar - Cuota Credito Variable</string>
    <string name="name">Nombre</string>
    <string name="add_input_account">Agregar Ingreso</string>
    <string name="add_account">Agregar Cuenta</string>
    <string name="max_quotes">Cuotas Maximas</string>
    <string name="cancel">Cancelar</string>
    <string name="delete">Eliminar</string>
    <string name="edit">Editar</string>
    <string name="ending">Finalizar</string>
    <string name="updating">Actualizar</string>
    <string name="dont_able_to_save">No se logro guardar</string>
    <string name="success_save_quote_credit">Se almaceno correctamente</string>
    <string name="close">Cerrar</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="do_you_want_to_delete_this_record">¿Desea eliminar el registro?</string>
    <string name="it_is_not_possible_log_in">No se logro realizar el inicio de session</string>
    <string name="email_address">Correo Electrónico</string>
    <string name="there_are_not_data">No hay datos</string>
    <string name="backup">Backup</string>
    <string name="restore">Restaurar</string>
    <string name="login">Iniciar Sesion</string>
    <string name="logout">Finalizar Session</string>
    <string name="dialog_restore">¿Esta seguro de aplicar la restauración de esta copia?\ntodos los datos serán eliminados.</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="delete_successfull">Se elimino correctamente</string>
    <string name="dont_deleted">No se logro eliminar</string>
    <string name="bought_made">Compra Realizada</string>
    <string name="product_name">Nombre Producto</string>
    <string name="product_value">Valor Producto</string>
    <string name="product_value_short">Valor</string>
    <string name="bought_date_time">Fecha Compra</string>
    <string name="total_quotes">Cuotas Totales</string>
    <string name="bought_quotes">Cuotas Pagadas</string>
    <string name="quotes_value">Valor Por Cuota</string>
    <string name="assing_credit_Card">Tarjeta Asignada</string>
    <string name="bought_quote">Cuota Pagada</string>
    <string name="cut_off_date">Fecha de Corte</string>
    <string name="count_items_quotes">A Cuotas</string>
    <string name="count_items_1_quote">A 1 Cuota</string>
    <string name="integer_hint">00</string>
    <string name="money_hint">$ 0\'000.00</string>
    <string name="date_hint">dd/MM/yyyy</string>
    <string name="add_buy">Agregar Compra</string>
    <string name="add_cash_advance">Agregar Avance</string>
    <string name="add_buy_wallet">Agregar Compra Cartera</string>
    <string name="bought">Pagado</string>
    <string name="format_date">dd/mm/yyyy</string>
    <string name="remainderCutOffDate">Dias restantes para fecha de corte</string>
    <string name="last_month_bought">Ultimo mes Pagado</string>
    <string name="capital_quotes">Capital Cuotas</string>
    <string name="capital_quote">Capital Sin Cuotas</string>
    <string name="last_month_interes">Intereses</string>
    <string name="bought_history">Pagos</string>
    <string name="cut_off_history">Periodos</string>
    <string name="quote_bought">Cuotas Pagadas</string>
    <string name="pending_to_pay">Pendiente por Pagar</string>
    <string name="value_spend">Limite</string>
    <string name="capital_value_short">Capital</string>
    <string name="current_capital_value_short">Capital Actual</string>
    <string name="quote_capital_value_short">Capital a Quotas</string>
    <string name="current_interest_value_short">Interes Actual</string>
    <string name="quote_interest_value_short">Interes de Quotas</string>
    <string name="interest_value_short">Interes</string>
    <string name="pending_to_pay_short">Pendiente</string>
    <string name="total_quote_value_short">Cuota</string>
    <string name="total_quote">Cuota Total</string>
    <string name="total">Total</string>
    <string name="total_debt">Deuda Total</string>
    <string name="create_credit_card">Crear Nueva Tarjeta Credito</string>
    <string name="cut_off_day">Dia de Corte</string>
    <string name="warning_quote_value">Valor alerta cuota</string>
    <string name="taxes_credit_card">Tasas Tarjeta Credito</string>
    <string name="dian_tax_declaration">Declaración DIAN</string>
    <string name="sms_credit_card">SMS Tarjeta Crédito</string>
    <string name="credit_card">Tarjeta de Credito</string>
    <string name="month">Mes</string>
    <string name="year">Año</string>
    <string name="year_hint">0.000</string>
    <string name="status">Estado</string>
    <string name="credit_cards">Tarjetas de Credito</string>
    <string name="interest_1_quote">No Pagar Interes 1era Cuota</string>
    <string name="interest_1not_quote">Pagar Interes en 2da Cuota</string>
    <string name="add_credit_card">Agregar Tarjeta Credito</string>
    <string name="add_tax">Agregar Tasa</string>
    <string name="taxs_credit_card">Tasas de Tarjeta de Credito</string>
    <string name="recurrent">Recurrente</string>
    <string name="cash_advance">Avance de Dinero</string>
    <string name="bough_wallet">Compra de cartera</string>
    <string name="sucursal_advance">Avance sucursal bancaria</string>
    <string name="bough_wallet_generic">Compra de cartera</string>
    <string name="fragment_list_sms_credit_card">Lista SMS Tarjeta Crédito</string>
    <string name="fragment_sms_credit_card">SMS Tarjeta Crédito</string>
    <string name="fragment_list_sms_paid">Lista SMS Pagos</string>
    <string name="fragment_sms_paid">SMS Pagos</string>
    <string name="sms_paid">SMS Pagos</string>
    <string-array name="Months">
        <item>--- Seleccionar --- </item>
        <item>Enero</item>
        <item>Febrero</item>
        <item>Marzo</item>
        <item>Abril</item>
        <item>Mayo</item>
        <item>Junio</item>
        <item>Julio</item>
        <item>Agosto</item>
        <item>Septiembre</item>
        <item>Octubre</item>
        <item>Noviembre</item>
        <item>Diciembre</item>
    </string-array>
    <string-array name="months_short">
        <item>--- Seleccionar --- </item>
        <item>Ene</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Abr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Ago</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dic</item>
    </string-array>
    <string name="item_select">--- Seleccionar --- </string>
    <string name="type_setting_does_not_record">No encontró registros con esta opción</string>
    <string-array name="CreditCardSettingType">
        <item>--- Seleccionar --- </item>
        <item>1. Rediferir</item>
        <item>2. Tasas Especiales</item>
    </string-array>
    <string name="item_select_setting_redifer">1. Rediferir</string>
    <string name="item_select_setting_special_tax">2. Tasas Especiales</string>
    <string name="_true">Si</string>
    <string name="_false">No</string>
    <string name="validation_name_empty">Ingrese un nombre</string>
    <string name="title_toolbar_fragment_list_credit_card_setting">Configuraciones</string>
    <string name="title_toolbar_fragment_credit_card_setting">Configuración</string>
    <string name="start_date">Fecha Inicio</string>
    <string name="end_date">Fecha Fin</string>
    <string name="account">Cuenta</string>
    <string name="paids">Pagados</string>
    <string name="check_payments_title">Pagos</string>
    <string name="previous_month">Mes Anterior</string>
    <string name="current_month">Mes Actual</string>
    <string name="next_month">Siguiente Mes</string>
</resources>