<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity"
    >

    <item
        android:id="@+id/item_menu_setting_check_payments"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/check_payments_title"
        android:titleCondensed="@string/check_payments_title"
        app:showAsAction="ifRoom" />

    <group>
        <item
            android:id="@+id/item_menu_setting_credit_card"
            android:icon="@drawable/ic_credit_card_foreground"
            android:title="@string/credit_cards"
            android:titleCondensed="@string/credit_card"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/item_menu_setting_taxes"
            android:icon="@android:drawable/sym_contact_card"
            android:title="@string/taxes_credit_card"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/sms_list_credit_card"
            android:icon="@android:drawable/stat_notify_chat"
            android:title="@string/sms_credit_card"
             />
    </group>

    <group >
        <item
            android:id="@+id/item_menu_setting_account"
            android:icon="@drawable/ic_credit_card_foreground"
            android:title="@string/account"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/sms_list_paid"
            android:icon="@android:drawable/stat_notify_chat"
            android:title="@string/sms_paid"
            />
    </group>

    <item
        android:id="@+id/item_menu_setting_check_paids"
        android:icon="@drawable/ic_credit_card_foreground"
        android:title="@string/paids"
        />

    <item
        android:id="@+id/item_menu_setting_settings_application"
        android:icon="@android:drawable/ic_menu_set_as"
        android:title="@string/settings_app"/>

    <item
    android:id="@+id/item_menu_setting_about_it"
    android:icon="@drawable/ic_credit_card_foreground"
    android:title="@string/about_it"/>

    <item
        android:id="@+id/item_menu_setting_google_login"
        android:icon="@drawable/ic_credit_card_foreground"
        android:title="LogIn on Google" />


</menu>