<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@+id/item_menu_side_quoteCredit">

    <fragment
        android:id="@+id/item_menu_side_boughtmade"
        android:name="co.japl.android.myapplication.controller.ListCreditCardQuote"
        android:label="@string/bought_made"
        tools:layout="@layout/list_credit_card_quote">

        <action
            android:id="@+id/action_list_cc_quote_to_list_bought"
            app:destination="@id/list_bought"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popUpToInclusive="true"
            />
        <action
            android:id="@+id/action_item_menu_side_boughtmade_to_buy_credit_card"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:destination="@id/buy_credit_card"
            app:popUpToInclusive="true"/>
        <action
            android:id="@+id/action_item_menu_side_boughtmade_to_cash_advance_fragment"
            app:destination="@id/cash_advance_fragment"
            app:popUpToInclusive="true"/>
        <action
            android:id="@+id/action_item_menu_side_boughtmade_to_list_periods"
            app:destination="@id/list_periods"
            app:popUpToInclusive="true"/>
        <action
            android:id="@+id/action_item_menu_side_boughtmade_to_boughWalletController"
            app:destination="@id/boughWalletController"
            app:popUpToInclusive="true"/>
    </fragment>
    <fragment
        android:id="@+id/item_menu_side_quoteCredit"
        android:name="co.japl.android.myapplication.controller.QuoteCredit"
        android:label="@string/quote_credit"
        tools:layout="@layout/quote_credit">
        <action
            android:id="@+id/action_save_credit_card"
            app:destination="@id/quoteCreditSave" />
        <action
            android:id="@+id/action_item_menu_side_quoteCredit_to_amortizationTableFragment"
            app:destination="@id/amortizationTableFragment" />
    </fragment>


    <fragment
        android:id="@+id/item_menu_side_quoteCreditVariable"
        android:name="co.japl.android.myapplication.controller.QuoteCreditVariable"
        android:label="@string/quote_credit_variable"
        tools:layout="@layout/quote_credit_variable">


        <action
            android:id="@+id/action_save_quote_credit_variable"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:destination="@id/quoteCreditSaveVariable"
            app:popUpToInclusive="true"/>
        <action
            android:id="@+id/action_item_menu_side_quoteCreditVariable_to_amortizationTableFragment"
            app:destination="@id/amortizationTableFragment" />
    </fragment>

    <fragment
        android:id="@+id/list_bought"
        android:name="co.japl.android.myapplication.controller.ListBought"
        android:label="@string/list_save"
        tools:layout="@layout/fragment_list_bought">
        <action
            android:id="@+id/action_list_bought_to_amortizationTableFragment"
            app:destination="@id/amortizationTableFragment" />
    </fragment>

    <fragment
        android:id="@+id/list_periods"
        android:name="co.japl.android.myapplication.controller.ListQuotesPaid"
        android:label="@string/list_periods"
        tools:layout="@layout/fragment_list_periods">

        <action
            android:id="@+id/action_list_periods_to_list_bought"
            app:destination="@id/list_bought"
            app:popUpToInclusive="true"/>
    </fragment>

    <fragment
        android:id="@+id/quoteCreditSave"
        android:name="co.japl.android.myapplication.controller.QuoteCreditSave"
        android:label="@string/quote_credit_save"
        tools:layout="@layout/quote_credit_save"/>

    <fragment
        android:id="@+id/quoteCreditSaveVariable"
        android:name="co.japl.android.myapplication.controller.QuoteCreditSaveVariable"
        android:label="@string/quote_credit_save_variable"
        tools:layout="@layout/quote_credit_save_variable"/>


    <fragment
        android:id="@+id/item_menu_side_listsave"
        android:name="co.japl.android.myapplication.controller.ListSave"
        android:label="@string/list_save"
        tools:layout="@layout/fragment_list_save" >
        <action
            android:id="@+id/action_item_menu_side_listsave_to_amortizationTableFragment"
            app:destination="@id/amortizationTableFragment" />
    </fragment>

    <fragment
        android:id="@+id/buy_credit_card"
        android:name="co.japl.android.myapplication.controller.QuoteBought"
        android:label="@string/add_buy"
        tools:layout="@layout/buys_credit_card" />

    <fragment
        android:id="@+id/item_menu_setting_about_it"
        android:name="co.japl.android.myapplication.finanzas.controller.AboutIt"
        android:label="@string/about_it"
        tools:layout="@layout/fragment_about_it" />
    <fragment
        android:id="@+id/item_menu_setting_credit_card"
        android:name="co.japl.android.myapplication.controller.ListCreditCard"
        android:label="@string/credit_cards"
        tools:layout="@layout/fragment_list_credit_card" >
        <action
            android:id="@+id/action_listCreditCard_to_createCreditCard"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:destination="@id/createCreditCard"
            app:popUpToInclusive="true"/>
    </fragment>
    <fragment
        android:id="@+id/createCreditCard"
        android:name="co.japl.android.myapplication.controller.CreateCreditCard"
        android:label="@string/create_credit_card"
        tools:layout="@layout/fragment_create_credit_card" >
        <action
            android:id="@+id/action_createCreditCard_to_listCreditCardSetting"
            app:destination="@id/listCreditCardSetting" />
    </fragment>


    <fragment
        android:id="@+id/item_menu_setting_taxes"
        android:name="co.japl.android.myapplication.controller.ListTaxCreditCard"
        android:label="@string/taxs_credit_card"
        tools:layout="@layout/fragment_list_tax_credit_card" >
        <action
            android:id="@+id/action_item_menu_setting_taxes_to_taxes"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:destination="@id/taxes"
            app:popUpToInclusive="true"/>
    </fragment>
    <fragment
        android:id="@+id/taxes"
        android:name="co.japl.android.myapplication.controller.Taxes"
        android:label="@string/tax"
        tools:layout="@layout/fragment_taxes" />
    <fragment
        android:id="@+id/cash_advance_fragment"
        android:name="co.japl.android.myapplication.finanzas.controller.CashAdvanceSave"
        android:label="@string/cash_advance"
        tools:layout="@layout/cash_advance_credit_card" />


    <fragment
        android:id="@+id/item_menu_setting_google_login"
        android:name="co.japl.android.myapplication.finanzas.controller.GDriveConnectFragment"
        android:label="Login on Google"
        tools:layout="@layout/fragment_g_drive_connect" />
    <fragment
        android:id="@+id/creditCardSettingFragment"
        android:name="co.japl.android.myapplication.finanzas.controller.CreditCardSettingFragment"
        android:label="@string/title_toolbar_fragment_credit_card_setting"
        tools:layout="@layout/fragment_credit_card_setting" />

    <fragment
        android:id="@+id/listCreditCardSetting"
        android:name="co.japl.android.myapplication.controller.ListCreditCardSetting"
        android:label="@string/title_toolbar_fragment_list_credit_card_setting"
        tools:layout="@layout/fragment_list_credit_card_setting" >
        <action
            android:id="@+id/action_listCreditCardSetting_to_creditCardSettingFragment"
            app:destination="@id/creditCardSettingFragment"
            app:popUpToInclusive="true"/>
    </fragment>
    <fragment
        android:id="@+id/boughWalletController"
        android:name="co.japl.android.myapplication.finanzas.controller.BoughWalletController"
        android:label="@string/bough_wallet"
        tools:layout="@layout/buy_wallet_credit_card"/>
    <fragment
        android:id="@+id/amortizationTableFragment"
        android:name="co.japl.android.myapplication.finanzas.controller.AmortizationTableFragment"
        android:label="@string/amortization_table"
        tools:layout="@layout/fragment_amortization_table" />

</navigation>